# tessera

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  biome.json  package.json  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs-pages.yml  release.yml
.omx/plans/: 2026-05-21-supply-chain-playbook-authoring-plan.md
apps/cli/: package.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: integration_settings.rs  lib.rs  main.rs  model_settings.rs
apps/sidecar/: package.json
docs/: .mintignore  beta-dogfood-checklist.md  beta-packaging.md  graph-built-in-playbooks.md  phase2_cognitive_engine_plan.md  playbook-authoring-recipe.md  playbook-patterns.md  playbook-validation-guide.md  tessera_prd.md
docs/playbook-authoring/: agentic-update-flow.md  authoring-brief-template.md  authoring-checklist.md  forward-test-001-customer-support-escalation.md  package-contract.md  portability-proof-001-customer-support-escalation.md  portability-proof-002-procurement-rfq-followup.md  recipe-001-seo-geo.md  recipe-002-supply-chain.md  (+6 more)
scripts/: build-sidecar.test.ts  build-sidecar.ts  docs-audit-public.ts  docs-check-style.ts  docs-prepare-github-pages.test.ts  docs-prepare-github-pages.ts  generate-builtin-graph-playbook-bundles.ts
(+182 files in other folders)
