[package]
name = "tessera"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "net", "time"] }
anyhow = "1"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
keyring = "3.6.3"
url = "2"

[dev-dependencies]
tempfile = "3"

# Profiles are defined at the workspace root (../../Cargo.toml) — cargo ignores them here.
